began file restructure of project, paddle object moves left/right, detects boundaries of board

--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
       <li>Break all the bricks to win!!!</li>
     </ol>
 
-  <script src="lib/index.js"></script>
+  <script src="main.bundle.js"></script>
 </body>
 </html>
