--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <div id='container'>
     <canvas id="canvas" width="520" height="500"></canvas>
     <div id='scoreboard'></div>
+    <div id="level-up">LEVEL UP</div>
     <section class="instructions">
       <h2>Welcome to Breakout</h2>
       <h3>How to Play</h3>
@@ -26,5 +27,6 @@
   </div>
 
   <script src="main.bundle.js"></script>
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </body>
 </html>
