refactor bottomBoundry function.  add man down.  add side collision detection.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <canvas id="canvas" width="520" height="500"></canvas>
     <div id='scoreboard'></div>
     <div id="level-up">LEVEL UP</div>
+    <div id="life-lost">MAN DOWN</div>
+    <div id="final-score">Final score</div>
     <section class="instructions">
       <h2>Welcome to Breakout</h2>
       <h3>How to Play</h3>
