add game over function and restart game function. achieve full mvp

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <div id='scoreboard'></div>
     <div id="level-up">LEVEL UP</div>
     <div id="life-lost">MAN DOWN</div>
-    <div id="final-score">Final score</div>
+    <div id="final-score">
+      <p id="game-over">GAME OVER</p>
+      <p id="new-game">Click to start a new game</p>
+    </div>
     <section class="instructions">
       <h2>Welcome to Breakout</h2>
       <h3>How to Play</h3>
