add ui elements to html, css, collision detection test passing, mvp should be good

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Breakout!</title>
+  <link href="https://fonts.googleapis.com/css?family=Orbitron:400,900" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet"/>
   <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-  <header><h1>Breakout</h1></header>
+  <header><h1>BREAKOUT</h1></header>
   <div id='container'>
     <canvas id="canvas" width="520" height="500"></canvas>
     <div id='scoreboard'></div>
@@ -30,8 +32,7 @@
       </ol>
     </section>
   </div>
-
-  <script src="main.bundle.js"></script>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="main.bundle.js"></script>
 </body>
 </html>
