made request to jQuery library secure

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </ol>
     </section>
   </div>
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="main.bundle.js"></script>
 </body>
 </html>
